# bomberust

./: Cargo.toml  README.md
assets/sprites/tetriminos/R/: R.ron
config/: display_config.ron  input.ron
src/: audio.rs  main.rs  state.rs
src/audio/: mod.rs  musics.rs  sounds.rs
src/constants/: mod.rs
src/entities/: board.rs  mod.rs  rustrimino.rs  tetriminos.rs
src/events/: events.rs  mod.rs
src/resources/: mod.rs  sprite.rs
src/systems/: clear_lines.rs  controller.rs  draw_pieces.rs  dropping.rs  generator.rs  mod.rs  score.rs
